<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/clicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/coins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coins_g10785a240_640" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0" />

    <Button
        android:id="@+id/upgrade_str"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/upgrade_click_strength"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/upgradeAutoStr"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/upgradeStrCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_cost"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/upgrade_str"
        app:layout_constraintStart_toStartOf="@+id/upgrade_str"
        app:layout_constraintTop_toBottomOf="@+id/upgrade_str" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/upgrades"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/clicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/upgrade_auto_spd"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/upgrade_auto_spd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/upgradeAutoStr"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/upgrade_auto_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/upgrade_auto_spd" />

    <TextView
        android:id="@+id/autoStrCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_cost"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/upgradeAutoStr"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/upgradeAutoStr"
        app:layout_constraintTop_toBottomOf="@+id/upgradeAutoStr" />

    <TextView
        android:id="@+id/autoSpdCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_cost"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/upgrade_auto_spd"
        app:layout_constraintStart_toStartOf="@+id/upgrade_auto_spd"
        app:layout_constraintTop_toBottomOf="@+id/upgrade_auto_spd" />

</androidx.constraintlayout.widget.ConstraintLayout>